src/index.css
*{
  box-sizing: border-box;
  margin:0;
}

html, body {
  height: 100%;
  width: 100%;
  background-color: #000000;
  display: flex;
  justify-content: center;
  align-items: center;
}

.App, .home {
  aspect-ratio: 1/1;
  width: 100%;
  max-width: 90vw;
  min-height: 550px;
  max-height: 90vh;
  height: 100%;

  background-color: #ffffff;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-top: 40px;
  overflow-y: auto;
  align-items: center;
  padding-bottom: 40px;
}

.home {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

}

.home h1 {
  font-family: karla, sans-serif;
  text-shadow: 0px 4px 2px rgb(212, 207, 207);
  letter-spacing: 2px;
  font-size: 31.25px;
  color: #293264;
  margin-bottom: 5px;
}



.question-container {
    border-bottom: 1px solid #dbdef0;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 15px;
    text-align: center; 
    padding-bottom: 10px;
}

.question-text {
    color: #293264;
    font-family: karla, sans-serif;
    font-size: 16px;
    margin-bottom: 12px;
    text-align: left;

}

.answers-container {
    display: flex;
    flex-wrap: wrap; 
    gap: 12px;
    margin-bottom: 10px;
}

.answer-btn {
    padding: 4px 15px;
    border: 1px solid #4D5B9E;
    border-radius: 8px;
    background-color:transparent;
    color: #293264;
    cursor: pointer;
    font-family: 'Inter', sans-serif;
    font-size: 10.25px;
    transition: all 0.2s ease;
}
.held {
    background-color: #D6DBF5;
    border: none;
    color: #293264;
}
.correct {
    background-color: #94D7A2;
    border: none;
    color: #293264;
}
.incorrect {
    background-color: #F8BCBC;
    border: none;
    color: #293264;
}
.check-answers-btn {
  background-color: #4D5B9E;
  width: 120px;
  height: 35px;
  border-radius: 10px;
  border: none;
  color: #ffffff;
  
  font-family: Inter, sans-serif;
  font-size: 10.25px;
  font-weight: semibold;
  cursor: pointer;
}

.play-again-btn {
  background-color: #4D5B9E;
  width: 104px;
  height: 30px;
  border-radius: 10px;
  border: none;
  color: #ffffff;
  
  font-family: Inter, sans-serif;
  font-size: 10.25px;
  font: semibold;
  cursor: pointer;
}

.check-answers-btn:hover {
  background-color: #3b4a8c;
}

.quiz-footer{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.result {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.result span {
    color: #293264;
    font-family: karla, sans-serif;
    font-size: 12.8px;
    font-weight: bold;
}

.quit-game-btn {
    background: none;
    border: none;
    color: #4D5B9E;
    cursor: pointer;
    font-family: 'Inter', sans-serif;
    font-size: 14px;
    font-weight: 600;
 
    margin-left: 10%; 
    margin-bottom: 30px; 

    display: block;
    text-align: left;
    width: fit-content;
}

.quit-game-btn:hover {
    color: #293264;
    text-decoration: underline;
}
  

